fix: sidebar on mobile

--- a/src/components/DataSourcesMenu/index.module.less
+++ b/src/components/DataSourcesMenu/index.module.less
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  max-width: 420px;
+  // max-width: 420px;
   padding: 0 10px 10px;
   overflow: hidden;
   font-weight: 600;
