--- a/src/components/ModelsSidebar/index.module.less
+++ b/src/components/ModelsSidebar/index.module.less
@@ -1,4 +1,5 @@
 .wrapper {
+  display: flex;
   width: 100%;
 
   font-size: 14px;
@@ -9,7 +10,15 @@
 }
 
 .space {
-  width: 100%;
+  display: flex;
+  width: 100% !important;
+}
+
+.row {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin-bottom: 16px;
 }
 
 .label {
@@ -22,7 +31,7 @@
 }
 
 .selectMobile {
-  width: 178px;
+  width: 100%;
 }
 
 .dropdown {
